# dimensional-experimental

./: .gitignore  CMakeLists.txt  Dimensional.sln  README.md
Dimensional/: Dimensional.vcxproj  Dimensional.vcxproj.filters  wip.h
include/dimensional/: dimensional.hpp
include/mitama/dimensional/: all.hpp  arithmetic.hpp  core.hpp  dimension.hpp  into.hpp  operators.hpp  prelude.hpp  quantity.hpp  refine.hpp
include/mitama/dimensional/core/: base_dimension.hpp  concepts.hpp  core.hpp  dimension.hpp  into_trait.hpp  type_list.hpp
include/mitama/dimensional/mitamagic/: concepts.hpp  type_list.hpp
include/mitama/dimensional/systems/: cgs.hpp  mks.hpp
include/mitama/dimensional/systems/cgs/: base_units.hpp
include/mitama/dimensional/systems/mks/: base_units.hpp
include/mitama/dimensional/systems/si/: all.hpp  base_units.hpp  derived.hpp  derived_units.hpp  prefixes.hpp  si.hpp
src/: intro.cpp  main.cpp  test.cpp
